<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classroom Library</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_scanner"></string>
    <string name="scanning_label">Opening scanner&#8230;</string>
    <string name="scan_button">Scan now!</string>
    <string name="isbn_label">ISBN</string>
    <string name="author_label">Author</string>
    <string name="title_label">Title</string>
    <string name="google_book_error_message">Couldn\'t get book info!</string>
    <string name="title_activity_add_book">Add a book</string>
    <string name="scan_book_instruct_label">Press \&quot;Scan now\&quot; button to scan a book\'s barcode and retrieve the ISBN, or manually enter the information.</string>
    <string name="add_book_button">Add book</string>
    <string name="no_isbn_error_message">Enter an ISBN before adding!</string>
    <string name="already_exists_error_message">That book has already been added!</string>
    <string name="couldnot_add_error_message">The book couldn\'t be added!</string>
    <string name="added_message">The book was added successfully!</string>
    <string name="view_books_button">View books</string>
    <string name="title_activity_view_books">Books</string>
    <string name="no_books_label">No books added yet!</string>
    <string name="title_activity_check_out">Check out</string>
    <string name="pick_name_label">Pick your name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_client">Add a client</string>
    <string name="client_first_hint">First name</string>
    <string name="client_last_hint">Last name</string>
    <string name="add_client_instruct_label">Add a new client:</string>
    <string name="add_client_button_label">Add client</string>
    <string name="no_client_name_error_message">The client must have at least one name!</string>
    <string name="could_not_add_client_error_message">Couldn\'t add client!</string>
    <string name="add_client_message">Added the new client!</string>
    <string name="checkout_button_label">Check out book</string>
    <string name="check_out_message">Checked out!</string>
    <string name="could_not_check_out_error_message">Couldn\'t check out book!</string>
    <string name="title_activity_check_in">Check in</string>
    <string name="scan_try_again_message">Try the scan again!</string>
    <string name="checkin_button_label">Check in book</string>
    <string name="check_in_message">Checked back in!</string>
    <string name="could_not_check_in_error_message">Couldn\'t check book in!</string>
    <string name="book_attr_name_isbn">ISBN</string>
    <string name="book_attr_name_checkedout">Checked Out?</string>
    <string name="book_attr_name_dateadded">Date Added</string>
    <string name="book_attr_ext_name_author">Author</string>
    <string name="book_attr_ext_name_title">Title</string>
    <string name="book_attr_name_checkedby">Check Out By</string>
    <string name="missing_book_value_error_message">Fill in all the required values!</string>
    <string name="refresh_label">Refresh</string>
    <string name="title_activity_create_account">Create an account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="create_account_button_label">Create account</string>
    <string name="sign_in_button_label">Log in</string>
    <string name="already_have_account_label">Already have account?</string>
    <string name="title_activity_login">Log in to account</string>
    <string name="add_attribute_lable">Add attribute</string>
    <string name="save_label">Save</string>
    <string name="logout_label">Logout</string>
    <string name="login_again_message">Yay! You\'re back!</string>
    <string name="login_no_email_message">Please enter your email!</string>
    <string name="login_no_password_message">Please enter your password!</string>
    <string name="login_passwords_not_matching_message">Your passwords don\'t match!</string>
    <string name="login_creds_not_working_message">That email or password doesn\'t match an account!</string>
    <string name="login_email_already_used_message">That email has already been used!</string>
    <string name="login_account_setup_success_message">You\'re all set up!</string>
    <string name="login_acount_setup_fail_message">Something went wrong!</string>
    <string name="green_cloud_img_desc">Cloud info downloaded</string>
    <string name="required_symbol">*</string>
    <string name="attr_added_success">Attribute added!</string>
    <string name="attr_added_fail">That attribute already exists!</string>
    <string name="wipe_database_button">Wipe data</string>
    <string name="new_attribute_dialog_title">New attribute</string>
    <string name="new_attribute_dialog_hint">New attribute name</string>
    <string name="cancel_label">Cancel</string>
    <string name="grey_cloud_img_desc">Cloud connected</string>
    <string name="yellow_cloud_img_desc">No info from cloud</string>
    <string name="loading_books_label">Loading books&#8230;</string>

</resources>
