<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountActivity" >

    <EditText
        android:id="@+id/new_email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/new_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <EditText
        android:id="@+id/confirm_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_confirm_hint" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <Button
	        android:id="@+id/create_account_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/create_account_button_label" />

        <ProgressBar
            android:id="@+id/create_account_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/already_have_account_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_label"
        android:textColor="#ff0000ff"
        android:layout_gravity="right"
        android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />

</LinearLayout>
