<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity" >
    
    <RelativeLayout 
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
	        android:id="@+id/add_client_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add_client_instruct_label" />
	    
	    <EditText
	        android:id="@+id/client_name_first_textview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/add_client_instructions"
	        android:layout_below="@+id/add_client_instructions"
	        android:layout_marginTop="16dp"
	        android:text=""
	        android:hint="@string/client_first_hint"
	        android:textAppearance="?android:attr/textAppearanceLarge">
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/client_name_last_textview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/client_name_first_textview"
	        android:layout_below="@+id/client_name_first_textview"
	        android:layout_marginTop="12dp"
	        android:text=""
	        android:hint="@string/client_last_hint"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <Button
	        android:id="@+id/add_client_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/client_name_last_textview"
	        android:layout_below="@+id/client_name_last_textview"
	        android:text="@string/add_client_button_label" />
        
    </RelativeLayout>

</ScrollView>
